Qdrant MetaFilter Set up WIP

--- a/src/database/build_qdrant_store.ipynb
+++ b/src/database/build_qdrant_store.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f9432ab8",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "8c974067",
    "metadata": {},
    "outputs": [
@@ -43,6 +43,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Qdrant store path: /home/prashant-agrawal/Netflix_Project/src/database/qdrant_store_local_db/collection\n",
+      "Data path: /home/prashant-agrawal/Netflix_Project/src/Data/Enriched_Indian_Startup_Dataset.csv\n",
       "Base Directory: /home/prashant-agrawal/Netflix_Project/src\n",
       "CSV Path: /home/prashant-agrawal/Netflix_Project/src/Data/Enriched_Indian_Startup_Dataset.csv\n",
       "Qdrant Local Path: /home/prashant-agrawal/Netflix_Project/src/database/qdrant_store_local_db/collection\n",
@@ -80,18 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c12e0767",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Stored 500 documents in Qdrant collection: 'indian_startups'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# 📊 Load and clean CSV\n",
