--- a/src/agents/qdrant_search_agent.ipynb
+++ b/src/agents/qdrant_search_agent.ipynb
@@ -1,5 +1,14 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f41ec58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "venv",
@@ -16,7 +25,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
