--- a/src/utils/path_config.ipynb
+++ b/src/utils/path_config.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "e9b4875d",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "e08415f0",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "ea46579e",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "b91ac334",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "a1e66fcc",
    "metadata": {},
    "outputs": [
@@ -137,6 +137,32 @@
     "    return os.path.join(get_base_dir(), \"Data\", \"Enriched_Indian_Startup_Dataset.csv\")\n",
     "print(f\"Data path: {get_data_path()}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a9a57f6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Schema path: /home/prashant-agrawal/Netflix_Project/src/schema/payload_schema.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the Schema Path for Qdrant Store \n",
+    "\n",
+    "def get_schema_path() -> str:\n",
+    "    \" GET Qdrant Schema Path \"\n",
+    "\n",
+    "    base_dir = get_base_dir()\n",
+    "\n",
+    "    return os.path.join(base_dir, \"schema\", \"payload_schema.json\")\n",
+    "print(f\"Schema path: {get_schema_path()}\")"
    ]
   }
  ],
