Qdrant Agent Set-Up WOrking Jsut Fine

--- a/src/tools/qdrant_tools/qdrant_server_tool.ipynb
+++ b/src/tools/qdrant_tools/qdrant_server_tool.ipynb
@@ -194,32 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9ac2049b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Wrapper for LangChain agent compatibility\n",
-    "def wrapped_qdrant_search(inputs: dict) -> list:\n",
-    "    query = inputs.get(\"query\", \"\")\n",
-    "    filters = inputs.get(\"filters\", None)\n",
-    "    k = inputs.get(\"k\", 5)\n",
-    "    print(f\"\\n[DEBUG] Query: {query}\")\n",
-    "    print(f\"[DEBUG] Filters: {filters}\")\n",
-    "    print(f\"[DEBUG] Top K: {k}\")\n",
-    "    try:\n",
-    "        results = qdrant_search_tool.search(query=query, filters=filters, k=k)\n",
-    "        print(f\"[DEBUG] Raw results: {results}\")\n",
-    "        return results\n",
-    "    except Exception as e:\n",
-    "        print(f\"[ERROR] Qdrant search failed: {e}\")\n",
-    "        return []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "190b136a",
    "metadata": {},
    "outputs": [
@@ -227,33 +202,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔍 Test: pure semantic (no filters)\n"
+      " • nobroker (founded=2013)\n",
+      " • classplus (founded=2020)\n",
+      " • phonepe (founded=1998)\n",
+      " • open financial (founded=1997)\n",
+      " • ather energy (founded=2021)\n",
+      "\n",
+      "─────────────────────────────────────────────────────\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_7014/792566242.py:80: DeprecationWarning: `search` method is deprecated and will be removed in the future. Use `query_points` instead.\n",
+      "/tmp/ipykernel_6799/792566242.py:80: DeprecationWarning: `search` method is deprecated and will be removed in the future. Use `query_points` instead.\n",
       "  results = self.client.search(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " • [0.7726] boat\n",
-      " • [0.7726] None\n",
-      " • [0.7726] None\n",
-      "\n",
-      "🔍 Test: metadata-only filter state=delhi\n",
-      " • cred (state=delhi)\n",
-      " • curefit (state=delhi)\n",
-      " • tork motors (state=delhi)\n",
-      " • lenskart (state=delhi)\n",
-      " • yulu (state=delhi)\n",
-      "\n",
-      "🔍 Test: range filter year_founded in [2000,2010]\n"
      ]
     }
    ],
@@ -269,21 +233,128 @@
     "    for r in qdrant_search_tool.search(query=\"\", filters={\"state\": \"delhi\"}, k=5):\n",
     "        print(f\" • {r['payload']['company_name']} (state={r['payload']['state']})\")\n",
     "\n",
-    "def test_range():\n",
-    "    print(\"🔍 Test: range filter year_founded in [2000,2010]\")\n",
+    "def test_full_query():\n",
     "    for r in qdrant_search_tool.search(\n",
-    "        query=\"\",\n",
-    "        filters={\"year_founded\": {\"gte\": 2000, \"lte\": 2010}},\n",
+    "        query=\"List D2C or SaaS companies in Delhi or Hyderabad\",\n",
+    "        filters = {\n",
+    "            \"hiring_status\": \"actively hiring\",\n",
+    "            \"industry_sector\": \"saas\"\n",
+    "        },\n",
     "        k=5\n",
     "    ):\n",
     "        print(f\" • {r['payload']['company_name']} (founded={r['payload']['year_founded']})\")\n",
+    "# ─── 6) MAIN: TEST THE FULL AGENT (ReAct LOOP) ────────────────────────────────\n",
+    "\n",
+    "    \n",
+    "    print(\"\\n─────────────────────────────────────────────────────\\n\")\n",
+    "\n",
     "\n",
     "# 6️⃣ Run all tests\n",
-    "test_semantic()\n",
-    "print()\n",
-    "test_metadata()\n",
-    "print()\n",
-    "test_range()\n"
+    "test_full_query()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f4f37e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_structured_results(results):\n",
+    "    if not results:\n",
+    "        print(\"No results found.\")\n",
+    "        return\n",
+    "    for i, r in enumerate(results, 1):\n",
+    "        payload = r.get(\"payload\", {})\n",
+    "        print(f\"\\nResult {i}:\")\n",
+    "        print(f\"  Company Name: {payload.get('company_name', 'N/A')}\")\n",
+    "        print(f\"  Industry Sector: {payload.get('industry_sector', 'N/A')}\")\n",
+    "        print(f\"  State: {payload.get('state', 'N/A')}\")\n",
+    "        print(f\"  Funding (INR): {payload.get('total_funding_raised_inr', 'N/A')}\")\n",
+    "        print(f\"  Hiring Status: {payload.get('hiring_status', 'N/A')}\")\n",
+    "        print(f\"  Lead Investors: {payload.get('lead_investors', 'N/A')}\")\n",
+    "        print(f\"  Score: {r.get('score', 'N/A')}\")\n",
+    "        print(\"-\" * 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "97790d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Qdrant Tool Direct Test ===\n",
+      "\n",
+      "[DEBUG] Query: SaaS startups in Delhi or Hyderabad with funding above 100 crore and actively hiring\n",
+      "[DEBUG] Filters: {'industry_sector': 'saas', 'state': 'delhi', 'hiring_status': 'actively hiring'}\n",
+      "[DEBUG] Top K: 3\n",
+      "[DEBUG] Raw results: [{'id': 406, 'score': 0.7650749, 'payload': {'company_name': 'nobroker', 'legal_entity_type': 'pvt ltd', 'state': 'delhi', 'headquarters_city': 'hyderabad', 'year_founded': '2013', 'company_website': 'https://wardinc.in', 'logo_url': 'https://logo.clearbit.com/wardinc.in', 'company_description_short': 'integrated background standardization', 'company_description_long': 'news far arm or season place. life simply rather outside.\\r\\ntrue office training environment. idea reveal my newspaper source.\\r\\npaper road air box also clear reach town. door research free hand data.', 'industry_sector': 'saas', 'total_funding_raised_inr': '₹153 cr', 'number_of_funding_rounds': '3', 'latest_funding_round_type': 'series b', 'latest_funding_date': '2025-02-23', 'lead_investors': 'roberts inc', 'revenue_estimate_annual': '₹40 cr', 'valuation_estimate_if_available': '₹430 cr', 'number_of_employees_current': '207', 'number_of_employees_estimate_range': '164-1286', 'key_people': 'ceo: todd adams, cto: chad heath', 'founders': 'jacob lynn (https://linkedin.com/in/blacknancy)', 'board_members___advisors': 'james thomas', 'employee_growth_yoy_%': '46%', 'hiring_status': 'actively hiring', 'popular_roles_open': 'marketing, sales', 'primary_products___services': 'credit card rewards', 'product_categories': 'b2b', 'tech_stack': 'node.js, mongodb, azure', 'integrations___apis_offered': 'razorpay, zoho, tally', 'target_market': 'enterprises', 'major_customers___logos': 'flipkart, tata group', 'press_mentions___recent_news': 'interview half student national try entire enough.', 'competitors': 'company x, company y'}}, {'id': 173, 'score': 0.73481953, 'payload': {'company_name': 'cashfree', 'legal_entity_type': 'public ltd', 'state': 'delhi', 'headquarters_city': 'jaipur', 'year_founded': '1996', 'company_website': 'https://crane,garciaandcooper.in', 'logo_url': 'https://logo.clearbit.com/crane,garciaandcooper.in', 'company_description_short': 'polarized bandwidth-monitored complexity', 'company_description_long': 'growth event moment coach price. woman ability scene as agree single.\\r\\nentire short true nature owner.\\r\\nhome president dark pressure and science. machine rule alone property. main new go whatever hair time individual sea. who hand give stay or.', 'industry_sector': 'saas', 'total_funding_raised_inr': '₹392 cr', 'number_of_funding_rounds': '4', 'latest_funding_round_type': 'series b', 'latest_funding_date': '2023-03-05', 'lead_investors': 'hall-newton', 'revenue_estimate_annual': '₹269 cr', 'valuation_estimate_if_available': '₹112 cr', 'number_of_employees_current': '330', 'number_of_employees_estimate_range': '474-1779', 'key_people': 'ceo: kristen sullivan, cto: johnny cooper', 'founders': 'leonard reyes (https://linkedin.com/in/nphillips)', 'board_members___advisors': 'gabrielle hall', 'employee_growth_yoy_%': '16%', 'hiring_status': 'actively hiring', 'popular_roles_open': 'engineering, marketing', 'primary_products___services': 'fashion retail', 'product_categories': 'b2b', 'tech_stack': 'node.js, mongodb, azure', 'integrations___apis_offered': 'razorpay, zoho, tally', 'target_market': 'consumers', 'major_customers___logos': 'direct consumers', 'press_mentions___recent_news': 'your especially eat effect leader scene.', 'competitors': 'startup a, startup b'}}, {'id': 460, 'score': 0.7280234, 'payload': {'company_name': \"byju's\", 'legal_entity_type': 'proprietorship', 'state': 'delhi', 'headquarters_city': 'bengaluru', 'year_founded': '2019', 'company_website': 'https://king-holland.in', 'logo_url': 'https://logo.clearbit.com/king-holland.in', 'company_description_short': 'exclusive non-volatile productivity', 'company_description_long': 'hospital bank this. increase study once although.\\r\\nbody road give show home style available. price wall out trial face free.\\r\\ndaughter position realize affect. agency trouble call after value.\\r\\nread off order gun five firm. purpose reduce room enough interview why. key authority ok tax also.', 'industry_sector': 'saas', 'total_funding_raised_inr': '₹444 cr', 'number_of_funding_rounds': '3', 'latest_funding_round_type': 'seed', 'latest_funding_date': '2021-09-26', 'lead_investors': 'moore, medina and morris', 'revenue_estimate_annual': '₹154 cr', 'valuation_estimate_if_available': '₹1479 cr', 'number_of_employees_current': '142', 'number_of_employees_estimate_range': '22-1022', 'key_people': 'ceo: mitchell rodgers, cto: steve newman', 'founders': 'kathryn bowman (https://linkedin.com/in/hansonjonathan)', 'board_members___advisors': 'donald clark', 'employee_growth_yoy_%': '46%', 'hiring_status': 'actively hiring', 'popular_roles_open': 'engineering, sales', 'primary_products___services': 'home services', 'product_categories': 'b2b', 'tech_stack': 'node.js, mongodb, azure', 'integrations___apis_offered': 'razorpay, zoho, tally', 'target_market': 'smbs', 'major_customers___logos': 'tier 2 service providers', 'press_mentions___recent_news': 'still late never garden.', 'competitors': 'unacademy, vedantu'}}]\n",
+      "\n",
+      "Result 1:\n",
+      "  Company Name: nobroker\n",
+      "  Industry Sector: saas\n",
+      "  State: delhi\n",
+      "  Funding (INR): ₹153 cr\n",
+      "  Hiring Status: actively hiring\n",
+      "  Lead Investors: roberts inc\n",
+      "  Score: 0.7650749\n",
+      "----------------------------------------\n",
+      "\n",
+      "Result 2:\n",
+      "  Company Name: cashfree\n",
+      "  Industry Sector: saas\n",
+      "  State: delhi\n",
+      "  Funding (INR): ₹392 cr\n",
+      "  Hiring Status: actively hiring\n",
+      "  Lead Investors: hall-newton\n",
+      "  Score: 0.73481953\n",
+      "----------------------------------------\n",
+      "\n",
+      "Result 3:\n",
+      "  Company Name: byju's\n",
+      "  Industry Sector: saas\n",
+      "  State: delhi\n",
+      "  Funding (INR): ₹444 cr\n",
+      "  Hiring Status: actively hiring\n",
+      "  Lead Investors: moore, medina and morris\n",
+      "  Score: 0.7280234\n",
+      "----------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_6799/792566242.py:80: DeprecationWarning: `search` method is deprecated and will be removed in the future. Use `query_points` instead.\n",
+      "  results = self.client.search(\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    # Example query and filters (adjust as needed)\n",
+    "    query = \"SaaS startups in Delhi or Hyderabad with funding above 100 crore and actively hiring\"\n",
+    "    filters = {\n",
+    "            \"industry_sector\": \"saas\",\n",
+    "            \"state\": \"delhi\",\n",
+    "            \"hiring_status\": \"actively hiring\",\n",
+    "             \n",
+    "          }\n",
+    "    k = 5\n",
+    "\n",
+    "    # Call the tool directly\n",
+    "    print(\"=== Qdrant Tool Direct Test ===\")\n",
+    "    result = wrapped_qdrant_search({\n",
+    "    \"query\": query,\n",
+    "    \"filters\": filters,\n",
+    "    \"k\":3\n",
+    "      })\n",
+    "\n",
+    "    print_structured_results(result)"
    ]
   }
  ],
